--- a/OpenMP/Makefile
+++ b/OpenMP/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
-CFLAGS = -std=c99 -g -Wall -Wextra -Werror -pg -O3 -march=native -fopenmp -mavx2 -I .
-LDFLAGS =-fopenmp
+CFLAGS = -std=c99 -g -Wall -Wextra -Werror -O3 -march=native  -mavx2 -I .
+LDFLAGS =
 
 # Uncomment these for OpenMP
 CFLAGS += -fopenmp
