--- a/OpenMP/Makefile
+++ b/OpenMP/Makefile
@@ -1,10 +1,9 @@
 CC = gcc
 CFLAGS = -std=c99 -g -Wall -Wextra -Werror -O3 -march=native  -mavx2 -I .
-LDFLAGS =
 
 # Uncomment these for OpenMP
 CFLAGS += -fopenmp
-LDFLAGS += -fopenmp
+LDFLAGS = -fopenmp
 
 all: lanczos_modp checker_modp
 lanczos_modp: mmio.o lanczos_modp.o
